[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/ubuntu-bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://features/intro/scripts/studio.gd" type="Script" id=2]
[ext_resource path="res://features/intro/scenes/developer.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "transition"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 1, 1, 1, 1 )
expand_margin_left = 8.0
expand_margin_right = 8.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[node name="studio" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
next_scene = ExtResource( 3 )

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="animation" type="AnimationPlayer" parent="background"]
anims/RESET = SubResource( 3 )
anims/transition = SubResource( 4 )

[node name="label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.5
margin_top = -35.5
margin_right = 145.5
margin_bottom = 35.5
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Logo Studio"
align = 1
valign = 1

[node name="timer" type="Timer" parent="."]
wait_time = 1.6
one_shot = true
autostart = true

[connection signal="animation_finished" from="background/animation" to="." method="_on_background_animation_finished"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
